--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -16,6 +16,7 @@
   "nativeAllowList": [
     "app.*",
     "os.*",
+    "computer.*",
     "debug.log",
     "storage.*",
     "filesystem.readFile"
@@ -34,7 +35,7 @@
   },
   "modes": {
     "window": {
-      "title": "markdown-reader",
+      "title": "Markdown Reader",
       "width": 800,
       "height": 500,
       "minWidth": 400,
@@ -79,7 +80,7 @@
     "resourcesPath": "/resources/",
     "extensionsPath": "/extensions/",
     "clientLibrary": "/resources/js/neutralino.js",
-    "binaryVersion": "5.2.0",
-    "clientVersion": "5.2.0"
+    "binaryVersion": "5.4.0",
+    "clientVersion": "5.4.0"
   }
 }
